--- a/app/src/main/res/layout/fragment_thu.xml
+++ b/app/src/main/res/layout/fragment_thu.xml
@@ -9,6 +9,18 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+         />
+
+    <Button
+        android:id="@+id/newThu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginStart="200dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="68dp"
+        android:background="#009688"
+        android:drawableLeft="@drawable/ic_baseline_add_box_24"
+        android:text="New" />
 
 </FrameLayout>
