--- a/app/src/main/res/layout/fragment_cai_dat.xml
+++ b/app/src/main/res/layout/fragment_cai_dat.xml
@@ -14,7 +14,6 @@
         android:layout_marginBottom="10dp"
         android:backgroundTint="#fa5246"
         android:drawableStart="@drawable/ic_save"
-        android:outlineSpotShadowColor="#FFFFFF"
         android:text="@string/Save"
         android:textSize="20sp" />
 
@@ -29,7 +28,7 @@
         android:hint="@string/prompt_email"
         android:text="@string/EditInformation"
         android:textColor="#fa5246"
-        android:textSize="20sp" />
+        android:textSize="25sp" />
 
     <EditText
         android:id="@+id/EmailSetting"
@@ -82,18 +81,21 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="bottom|right"
-        android:layout_marginBottom="50dp"
-        android:backgroundTint="#fa5246"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="#FFFFFF"
         android:drawableStart="@drawable/ic_baseline_exit_to_app_24"
-        android:outlineSpotShadowColor="#FFFFFF"
-        android:textSize="10sp" />
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|start"
-        android:layout_margin="@dimen/fab_margin"
-        android:backgroundTint="#fa5246"
-        app:srcCompat="@android:drawable/ic_input_add"/>
+        tools:ignore="RtlHardcoded" />
+
+    <ProgressBar
+        android:id="@+id/ProgressSetting"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_gravity="center|center_vertical"
+        app:layout_constraintVertical_bias="0.638" />
 
 </FrameLayout>
