--- a/app/src/main/res/layout/fragment_thu.xml
+++ b/app/src/main/res/layout/fragment_thu.xml
@@ -17,10 +17,23 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_marginStart="200dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="68dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="16dp"
         android:background="#009688"
         android:drawableLeft="@drawable/ic_baseline_add_box_24"
         android:text="New" />
+
+    <ListView
+        android:id="@+id/ListViewThu"
+        android:layout_width="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_height="646dp" />
+
+    <ProgressBar
+        android:id="@+id/ProgressThu"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:visibility="invisible"
+        android:layout_gravity="center"/>
 
 </FrameLayout>
