--- a/app/src/main/res/layout/activity_them_chi.xml
+++ b/app/src/main/res/layout/activity_them_chi.xml
@@ -41,30 +41,17 @@
             android:textColor="#fa5246"
             android:textSize="20sp" />
 
-        <EditText
-            android:id="@+id/LoaiThanhToanThemChi"
+
+
+
+        <Spinner
+            android:id="@+id/SpinnerLoaiChi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="196dp"
-            android:layout_marginEnd="24dp"
-            android:hint="@string/LoaiThanhToan"
-            android:inputType="text"
-
-            android:selectAllOnFocus="true"
-            android:textColorLink="#fa5246" />
-
-        <EditText
-            android:id="@+id/CategoryChi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:entries="@array/loai_chi"
             android:layout_marginStart="24dp"
             android:layout_marginTop="256dp"
-            android:layout_marginEnd="24dp"
-            android:hint="@string/CategoryThu"
-            android:inputType="text"
-            android:selectAllOnFocus="true"
-            android:textColorLink="#fa5246" />
+            android:layout_marginEnd="24dp"/>
         <EditText
             android:id="@+id/SoTienChi"
             android:layout_width="match_parent"
@@ -86,7 +73,7 @@
             android:layout_marginEnd="24dp"
             android:headerBackground="#fa5246"
             android:hint="Ghi chú"
-            android:inputType="number"
+            android:inputType="text"
             />
 
         <Button
