--- a/app/src/main/res/layout/activity_them_thu.xml
+++ b/app/src/main/res/layout/activity_them_thu.xml
@@ -40,30 +40,16 @@
             android:textColor="#fa5246"
             android:textSize="20sp" />
 
-        <EditText
-            android:id="@+id/LoaiThanhToan"
+        <Spinner
+            android:id="@+id/SpinnerLoaiThu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="196dp"
-            android:layout_marginEnd="24dp"
-            android:hint="@string/LoaiThanhToan"
-            android:inputType="text"
-
-            android:selectAllOnFocus="true"
-            android:textColorLink="#fa5246" />
-
-        <EditText
-            android:id="@+id/CategoryThu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:entries="@array/loai_thu"
             android:layout_marginStart="24dp"
             android:layout_marginTop="256dp"
-            android:layout_marginEnd="24dp"
-            android:hint="@string/CategoryThu"
-            android:inputType="text"
-            android:selectAllOnFocus="true"
-            android:textColorLink="#fa5246" />
+            android:layout_marginEnd="24dp"/>
+
+
         <EditText
             android:id="@+id/SoTienThu"
             android:layout_width="match_parent"
@@ -85,7 +71,7 @@
             android:layout_marginEnd="24dp"
             android:headerBackground="#fa5246"
             android:hint="Ghi chú"
-            android:inputType="number"
+            android:inputType="text"
             />
 
         <Button
