--- a/app/src/main/res/layout/fragment_thong_ke.xml
+++ b/app/src/main/res/layout/fragment_thong_ke.xml
@@ -40,47 +40,48 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="36dp"
-        android:layout_marginTop="154dp"
         android:layout_marginStart="16dp"
-
+        android:layout_marginTop="212dp"
         android:layout_marginRight="24dp"
-        android:text="Chọn loại: " />
+        android:text="Số tiền: " />
+
     <Spinner
         android:id="@+id/SpinnerLoaiThongKe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:entries="@array/loai_thong_ke"
-        android:layout_marginTop="153dp"
         android:layout_marginStart="140dp"
-        android:layout_marginRight="48dp"/>
+        android:layout_marginTop="210dp"
+        android:layout_marginRight="48dp"
+        android:entries="@array/loai_thong_ke" />
+
+    <EditText
+        android:id="@+id/SoTienMaxThongKe"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="288dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginRight="24dp"
+        android:hint="Max"
+        android:inputType="number"
+        android:textSize="16dp" />
+
+    <EditText
+        android:id="@+id/SoTienMinThongKe"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginRight="24dp"
+        android:hint="Min"
+        android:inputType="number"
+        android:textSize="16dp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="36dp"
-        android:layout_marginTop="212dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="264dp"
         android:layout_marginRight="24dp"
-        android:text="Số tiền: " />
-
-    <EditText
-        android:layout_width="100dp"
-        android:id="@+id/SoTienMinThongKe"
-        android:hint="Min"
-        android:textSize="16dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginRight="24dp"
-        android:inputType="number"/>
-    <EditText
-        android:layout_width="100dp"
-        android:id="@+id/SoTienMaxThongKe"
-        android:hint="Max"
-        android:textSize="16dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="288dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginRight="24dp"
-        android:inputType="number"/>
+        android:text="Chọn loại: " />
 
 </FrameLayout>
