--- a/app/src/main/res/layout/fragment_thong_ke.xml
+++ b/app/src/main/res/layout/fragment_thong_ke.xml
@@ -40,8 +40,33 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="36dp"
+        android:layout_marginTop="146dp"
+        android:layout_marginRight="24dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="212dp"
+        android:text="Chọn thời gian: " />
+
+    <Spinner
+        android:id="@+id/SpinnerThangThongKe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="270dp"
+        android:layout_marginTop="145dp"
+        android:layout_marginRight="48dp"
+        android:entries="@array/nam" />
+
+    <Spinner
+        android:id="@+id/SpinnerNamThongKe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="145dp"
+        android:layout_marginRight="48dp"
+        android:entries="@array/thang" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="264dp"
         android:layout_marginRight="24dp"
         android:text="Số tiền: " />
 
@@ -80,7 +105,7 @@
         android:layout_width="match_parent"
         android:layout_height="36dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="264dp"
+        android:layout_marginTop="212dp"
         android:layout_marginRight="24dp"
         android:text="Chọn loại: " />
 
