--- a/app/src/main/res/layout/fragment_thu.xml
+++ b/app/src/main/res/layout/fragment_thu.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.Components.Thu"
-    android:background="#CC9D74">
+   >
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -28,13 +28,16 @@
         android:id="@+id/ListViewThu"
         android:layout_width="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="10dp"
         android:layout_height="646dp"
         android:scrollX="0px"
         android:scrollY="0px"
         android:scrollbarAlwaysDrawVerticalTrack="true"
         android:scrollbarSize="20dp"
         android:scrollbarStyle="outsideOverlay"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical"
+        android:padding="16dip"
+        android:clipToPadding="false"/>
 
     <ProgressBar
         android:id="@+id/ProgressThu"
