--- a/app/src/main/res/layout/list_chi.xml
+++ b/app/src/main/res/layout/list_chi.xml
@@ -5,16 +5,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C89B73"
     >
     <TextView
         android:id="@+id/textViewChi6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="4dp"
         android:text="TextView"
-        android:textSize="20dp"
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@+id/textviewNgayThangChi"
+        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/textviewNgayThangChi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="4dp"
+        android:text="Ngày:"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,7 +34,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="4dp"
         android:text="TextView"
-        android:textSize="20dp"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/textViewChi6"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,45 +45,73 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="4dp"
         android:text="TextView"
-        android:textSize="20dp"
+        android:textSize="18sp"
 
         app:layout_constraintStart_toEndOf="@+id/textViewChi3"
         app:layout_constraintTop_toTopOf="parent" />
-
+    <TextView
+        android:id="@+id/textviewSoTienChi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="32dp"
+        android:text="Số tiền:"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@+id/textViewChi7"
+        app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/textViewChi5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="32dp"
         android:text="TextView"
         android:textSize="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textviewGhiChuChi"
         app:layout_constraintHorizontal_bias="0.214"
-        app:layout_constraintStart_toEndOf="@+id/textViewChi7"
+        app:layout_constraintStart_toEndOf="@+id/textviewSoTienChi"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewChi7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="32dp"
         android:text="TextView"
         android:textSize="16dp"
         android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/textviewLoaiChi"
+        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/textviewLoaiChi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:text="Loại:"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/textviewGhiChuChi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="32dp"
+        android:text="Ghi chú:"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@+id/textViewChi5"
         app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/textViewChi8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="32dp"
         android:text="TextView"
         android:textSize="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.214"
-        app:layout_constraintStart_toEndOf="@+id/textViewChi5"
+        app:layout_constraintStart_toEndOf="@+id/textviewGhiChuChi"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
