--- a/app/src/main/res/layout/fragment_chi.xml
+++ b/app/src/main/res/layout/fragment_chi.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_marginBottom="10dp"
-        android:backgroundTint="#D66151"
+        android:backgroundTint="#fa5246"
         android:layout_marginRight="16dp"
         android:outlineSpotShadowColor="#FFFFFF"
         android:text="Tạo chi tiêu mới"
