--- a/app/src/main/res/layout/list_thu.xml
+++ b/app/src/main/res/layout/list_thu.xml
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/textviewNgayThangThu"
+        android:textColor="#fa5246"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -56,6 +57,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="32dp"
         android:text="Số tiền:"
+        android:textColor="#fa5246"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/textView7"
         app:layout_constraintTop_toTopOf="parent" />
@@ -87,6 +89,7 @@
         android:id="@+id/textviewLoaiThu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#fa5246"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:text="Loại:"
@@ -100,6 +103,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="32dp"
         android:text="Ghi chú:"
+        android:textColor="#fa5246"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toTopOf="parent" />
